php/error.txt
main.cpp:1:1: error: 'asfasfasda' does not name a type
 asfasfasda
 ^~~~~~~~~~
